kubernetes/platform/api/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-system
  labels:
    app.kubernetes.io/name: edinstance-platform
    app.kubernetes.io/part-of: edinstance-platform
    gateway.edinstance.uk/route-access: "true"
    observability.edinstance.uk/otlp-access: "true"
    platform.edinstance.uk/component: api
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    app.kubernetes.io/name: apps
    app.kubernetes.io/part-of: edinstance-platform
    gateway.edinstance.uk/route-access: "true"
    observability.edinstance.uk/otlp-access: "true"
